add migration liquibase,create db

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,15 @@
 spring.application.name=Cloud-file-storage
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
+
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:/db/changelog/db.changelog-master.yaml
 
 #add .env
 #set hikari pool
